Prevent horizontal scroll
Picture element is wide

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,8 @@ img {
 
 body, html {
   font-family: 'Lato', sans-serif; 
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
 body {
